# Elden-Ring-Nightreign-Save-Editor-PS4

./: pyproject.toml
src/: Final.py  basic_class.py  config_manager.py  globals.py  inventory_handler.py  language_manager.py  log_config.py  relic_checker.py  source_data_handler.py  vessel_handler.py
src/Resources/locales/: messages.pot
src/Resources/locales/en_US/LC_MESSAGES/: en_US.po
src/Resources/locales/zh_CN/LC_MESSAGES/: zh_CN.po
src/Resources/locales/zh_TW/LC_MESSAGES/: zh_TW.mo  zh_TW.po
src/locales/en_US/LC_MESSAGES/: en_US.mo
src/locales/zh_CN/LC_MESSAGES/: zh_CN.mo
src/locales/zh_TW/LC_MESSAGES/: zh_TW.mo  zh_TW.po
